servicemesh/5.mTLS/mtls-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-enable-policy
  namespace: istio-demo
spec:
  mtls:
    mode: STRICT
