servicemesh/5.mTLS/postgres-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: postgres-app-destination-v1-community
spec:
  host: backend-postgres-service-v1-community
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
