servicemesh/5.mTLS/quarkus-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: quarkus-app-destination-v1
spec:
  host: frontend-java-runner-service-v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: app-v1
    labels:
      version: v1
